--- a/chat.html
+++ b/chat.html
@@ -45,19 +45,19 @@
         <h1>Inställningar</h1>
         <br>
         <div class="j1">
-            <div class="2"><a href="skriva.html">Preferenser</a></div>
+            <div class="2"><a href="skriva.html">Björn</a></div>
         </div>
         <div class="j2">
-            <div class="4"><a href="skriva.html">Integritet</a></div>
+            <div class="4"><a href="skriva.html">Anders</a></div>
         </div>
         <div class="j3">
-            <div class="6"><a href="skriva.html">Notiser</a></div>
+            <div class="6"><a href="skriva.html">Mats</a></div>
         </div>
         <div class="j4">
-            <div class="8"><a href="skriva.html">Policy</a></div>
+            <div class="8"><a href="skriva.html">Tom</a></div>
         </div>
         <div class="j5">
-            <div class="10"><a href="skriva.html">Kontoinställningar</a></div>
+            <div class="10"><a href="skriva.html">Daniel</a></div>
         </div>
 
         <br><br><br>
