--- a/chat.html
+++ b/chat.html
@@ -42,22 +42,22 @@
 
     <br><br><br>
     <section>
-        <h1>Inställningar</h1>
+        <h1>Mina matchningar</h1>
         <br>
         <div class="j1">
-            <div class="2"><a href="skriva.html">Björn</a></div>
+            <div class="2"><img src="images/match1.jpg" height="50px"><a href="skriva.html"></a>Björn</a></div>
         </div>
         <div class="j2">
-            <div class="4"><a href="skriva.html">Anders</a></div>
+            <div class="4"><img src="images/match2.jpg" height="50px"><a href="skriva.html">Anders</a></div>
         </div>
         <div class="j3">
-            <div class="6"><a href="skriva.html">Mats</a></div>
+            <div class="6"><img src="images/match3.jpg" height="50px"><a href="skriva.html">Mats</a></div>
         </div>
         <div class="j4">
-            <div class="8"><a href="skriva.html">Tom</a></div>
+            <div class="8"><img src="images/match4.jpg" height="50px"><a href="skriva.html">Tom</a></div>
         </div>
         <div class="j5">
-            <div class="10"><a href="skriva.html">Daniel</a></div>
+            <div class="10"> <img src="images/matcht5.jpg" height="50px"><a href="skriva.html">Daniel</a></div>
         </div>
 
         <br><br><br>
