--- a/profil.html
+++ b/profil.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+        
         <section>
             <div class="myflexbox">
                 <div class="ett"></div>
@@ -38,6 +39,16 @@
                 <div class="fem"></div>
             </div>
         </section>
+        <section id="minprofil"> <br>
+            <section class="minprof">
+                <img src="images/minprofil1.jpg" height="500px" width="500px">
+                <p>hej</p>
+                <img src="images/minprofil2.jpg" height="500px" width="500px">
+                <p>hej</p>
+                <img src="images/minprofil3.jpg" height="500px" width="500px">
+                <p>hej</p>
+    
+
     </header>
 
     <footer>
