--- a/registrering.html
+++ b/registrering.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrera dig</title>
-    <link rel="stylesheet" href="css/start.css">
+    <link rel="stylesheet" href="css/registrering.css">
 </head>
 <body>
     <header>
@@ -27,7 +27,7 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><a href="index.html" style="text-align: center;"><strong>Ljuva Livet</strong></div>
+                <div class="tre"><a style="text-align: center;"><strong>Ljuva Livet</strong></div>
             </div>
 
             <div class="myflexbox4">
@@ -45,7 +45,7 @@
 <br>
 
 <section class="rosa">
-<div class="formu">
+<div class="formu"></div>
     <form>
         <div class="bilder">
             <h3><strong>Om dig:</strong></h3>
@@ -128,6 +128,8 @@
     </div>
 
 </div>
+
+<p></p><a href="index.html">Skapa konto</a>
 
 </section>
 
