--- a/login.html
+++ b/login.html
@@ -38,12 +38,24 @@
                 <div class="fem"></div>
             </div>
         </section>
+
+        <br><br><br>
+        <h2><strong>Logga in eller</strong></h2> 
+        <h2><strong><a href="registrering.html">registrera dig:</a></strong></h2>
+        <br>
+        <label for="fname"><strong>Förnamn:</strong></label> <br>
+        <input type="text" id="fname" name="fname">
+        <br>
+        <br><br>
+        <label for="lname"><strong>Efternamn:</strong></label> <br>
+        <input type="text" id="lname" name="lname">
+        <br><br>
+<br>
     </header>
 
-    <footer>
-        <body style="text-align: center;" onload="buildMenu()">
-             <ul id="menu"></ul>
-    </footer>
+
+<a href="index.html">Logga in</a>
+
 
 </body>
 </html>
