--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><a href="index.html" style="text-align: center;"><strong>Ljuva Livet</strong></div>
+                <div class="tre"><strong>Ljuva Livet</strong></div>
             </div>
 
             <div class="myflexbox4">
@@ -43,18 +43,18 @@
         <h2><strong>Logga in eller</strong></h2> 
         <h2><strong><a href="registrering.html">registrera dig:</a></strong></h2>
         <br>
-        <label for="fname"><strong>Förnamn:</strong></label> <br>
+        <label for="fname"><strong>Mailadress:</strong></label> <br>
         <input type="text" id="fname" name="fname">
         <br>
         <br><br>
-        <label for="lname"><strong>Efternamn:</strong></label> <br>
-        <input type="text" id="lname" name="lname">
+        <label for="password"><strong>Lösenord:</strong></label> <br>
+        <input type="password" id="password" name="password">
         <br><br>
 <br>
     </header>
 
 
-<a href="index.html">Logga in</a>
+<h2><a href="index.html">Logga in</a></h2>
 
 
 </body>
