--- a/registrering.html
+++ b/registrering.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><a style="text-align: center;"><strong>Ljuva Livet</strong></div>
+                <div class="tre"><strong>Ljuva Livet</strong></div>
             </div>
 
             <div class="myflexbox4">
@@ -129,7 +129,7 @@
 
 </div>
 
-<p></p><a href="index.html">Skapa konto</a>
+<h2><a href="index.html">Skapa konto</a></h2>
 
 </section>
 
