--- a/inställningar.html
+++ b/inställningar.html
@@ -72,6 +72,6 @@
              <ul id="menu"></ul>
     </footer>
 
-<script src="js/start.js"></script>
+<script src="js/inställningar.js"></script>
 </body>
 </html>
