--- a/profil1.html
+++ b/profil1.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Startsida</title>
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/start.css">
 </head>
 <body>
     <header>
@@ -27,7 +27,8 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><strong>Ljuva Livet</strong></div>
+                <div class="tre"><a href="index.html" style="text-align: center;"><strong> Ljuva Livet</strong></div>
+                    
             </div>
 
             <div class="myflexbox4">
@@ -38,24 +39,31 @@
                 <div class="fem"></div>
             </div>
         </section>
-
-        <br><br><br>
-        <h2><strong>Logga in eller</strong></h2> 
-        <h2><strong><a href="registrering.html">registrera dig:</a></strong></h2>
-        <br>
-        <label for="fname"><strong>Mailadress:</strong></label> <br>
-        <input type="text" id="fname" name="fname">
-        <br>
-        <br><br>
-        <label for="password"><strong>Lösenord:</strong></label> <br>
-        <input type="password" id="password" name="password">
-        <br><br>
-<br>
     </header>
 
+    <section id="tinder"> <br>
+        <section class="tinder2">
+            <img src="images/kille1.jpg" height="500px" width="500px">
+            <p>hej</p>
+            <img src="images/kille12.jpg" height="500px" width="500px">
+            <p>hej</p>
+            <img src="images/kille13.jpg" height="500px" width="500px">
+            <p>hej</p>
 
-<h2><a href="index.html">Logga in</a></h2>
 
+            <div class="swipe">
+                <div class="höger"><a href="profil2.html" >💔</a></div>
+                <div class="vänster"><a href="profil.3.html" >❤️‍🔥</a></div>
+            </div>
+        </section>
 
+    </section>
+
+    <footer>
+        <body style="text-align: center;" onload="buildMenu()">
+             <ul id="menu"></ul>
+    </footer>
+
+<script src="js/start.js"></script>
 </body>
 </html>
