--- a/profil.3.html
+++ b/profil.3.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><a href="index.html" style="text-align: center;"><strong> Ljuva Livet</strong></a></div>
+                <div class="tre"><a href="profil1.html" style="text-align: center;"><strong> Ljuva Livet</strong></a></div>
             </div>
 
             <div class="myflexbox4">
@@ -52,7 +52,7 @@
 
             <div class="swipe">
                 <div class="höger"><a href="profil2.html" >💔</a></div>
-                <div class="vänster"><a href="index.html" >❤️‍🔥</a></div>
+                <div class="vänster"><a href="profil1.html" >❤️‍🔥</a></div>
 
         
             </div>
