--- a/profil.html
+++ b/profil.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><a href="index.html" style="text-align: center;"><strong>Ljuva Livet</strong></div>
+                <div class="tre"><a href="profil1.html" style="text-align: center;"><strong>Ljuva Livet</strong></div>
             </div>
 
             <div class="myflexbox4">
