--- a/profil2.html
+++ b/profil2.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="myflexbox3">
-                <div class="tre"><a href="index.html"><strong> Ljuva Livet</strong></a></div>
+                <div class="tre"><a href="profil1.html"><strong> Ljuva Livet</strong></a></div>
             </div>
 
             <div class="myflexbox4">
@@ -51,7 +51,7 @@
 
 
             <div class="swipe">
-                <div class="höger"><a href="index.html" >💔</a></div>
+                <div class="höger"><a href="profil1.html" >💔</a></div>
                 <div class="vänster"><a href="profil.3.html" >❤️‍🔥</a></div>
 
             </div>
