--- a/registrering.html
+++ b/registrering.html
@@ -39,7 +39,7 @@
             </div>
         </section>
     </header>
-<p style="text-align: left;"> <a href="login.html">Tillbaka</a></p>
+<p style="text-align: left;"> <a href="index.html">Tillbaka</a></p>
 <br>
 <h1>Registrera dig</h1>
 <br>
@@ -129,7 +129,7 @@
 
 </div>
 
-<h2><a href="index.html">Skapa konto</a></h2>
+<h2><a href="profil1.html">Skapa konto</a></h2>
 
 </section>
 
