--- a/chat.html
+++ b/chat.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startsida</title>
+    <title>Mina matchningar</title>
     <link rel="stylesheet" href="css/chat.css">
 </head>
 <body>
