--- a/profil1.html
+++ b/profil1.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Startsida</title>
+    <title>Profil-1</title>
     <link rel="stylesheet" href="css/start.css">
 </head>
 <body>
