--- a/inställningar.html
+++ b/inställningar.html
@@ -63,7 +63,7 @@
         <br><br><br>
     </section>
     <section>
-        <a href="login.html">Logga ut</a>
+        <a href="index.html">Logga ut</a>
         <br><br><br>
     </section>
 
