--- a/skriva.html
+++ b/skriva.html
@@ -12,9 +12,10 @@
 </script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chattapplikation</title>
+<title>Chatt</title>
 <link rel="stylesheet" href="CSS/skriva.css">
 <style>
+    
 body {
 font-family: Arial, sans-serif;
 margin: 0;
